完善服务端接口和接口文档
